fix overflow

--- a/public/assets/scss/layout/_hero.scss
+++ b/public/assets/scss/layout/_hero.scss
@@ -1276,7 +1276,6 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
 
   .hero-background {
     position: absolute;
